# yt-music-player

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: BasicPlaylist.h  CMakeLists.txt  MPV_Controller.h  MPV_Listener.h  MusicPlayer.h  Playlist.h  PlaylistUpdater.h  Randomer.h  Track.h  Types.h  URLParser.h  Utils.h  WebSocketPlayer.h
include/events/: FileEndPlayingEvent.h  FileStartPlayingEvent.h  NewPlaylistFetchFailedEvent.h  NewPlaylistReadyEvent.h  PlaybackStartedEvent.h  PlaybackStoppedEvent.h  PlaybackTimeUpdatedEvent.h  PlaylistFetchStartEvent.h
include/youtube/: YoutubeHandler.h  YoutubePlaylist.h
lib/: CMakeLists.txt
lib/EventBus/: CMakeLists.txt
lib/jsoncpp/: CMakeLists.txt
lib/simple-websocket-server/: crypto.hpp
src/: BasicPlaylist.cpp  CMakeLists.txt  MPV_Controller.cpp  MPV_Listener.cpp  MusicPlayer.cpp  Playlist.cpp  PlaylistUpdater.cpp  Utils.cpp  WebSocketPlayer.cpp
src/youtube/: CMakeLists.txt  YoutubeHandler.cpp  YoutubePlaylist.cpp  youtube-handler.py
webclient/: gui.js  index.html  manifest.json  style.css  yt_search.js
yt-music-player.xcodeproj/: project.pbxproj
yt-music-player.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
yt-music-player.xcodeproj/project.xcworkspace/xcuserdata/Nicolas.xcuserdatad/: UserInterfaceState.xcuserstate
yt-music-player.xcodeproj/xcuserdata/Nicolas.xcuserdatad/xcschemes/: xcschememanagement.plist  yt-music-player-doc.xcscheme  yt-music-player.xcscheme
